--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
       </span>
     </div>
     <div id="nav"
-    <script src="" async defer>1</script>
+    <script src="" async defer></script>
   </body>
 </html>
